@@ -1,3 +1,9 @@
+ace (6.2.6-1) experimental; urgency=low
+
+  * New upstream release.
+
+ -- Johnny Willemsen <jwillemsen@remedy.nl>  Tue, 22 April 2014 19:01:01 +0200
+
 ace (6.2.5-1) experimental; urgency=low
 
   * New upstream release.
