@@ -35,6 +35,7 @@
     <hr>
     We do have the documentation for previous releases
     <ul>
+      <LI><P><A HREF="6.2.6/html">6.2.6</A></P></LI>
       <LI><P><A HREF="6.2.5/html">6.2.5</A></P></LI>
       <LI><P><A HREF="6.2.4/html">6.2.4</A></P></LI>
       <LI><P><A HREF="6.2.3/html">6.2.3</A></P></LI>
