@@ -1,3 +1,6 @@
+USER VISIBLE CHANGES BETWEEN ACE-6.2.6 and ACE-6.2.7
+====================================================
+
 USER VISIBLE CHANGES BETWEEN ACE-6.2.5 and ACE-6.2.6
 ====================================================
 
